[package]
name = "sbe-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
glidesort = "0.1.2"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
smallvec = "1.15.2"
tokio = { version = "1.52.4", features = ["full"] }
zerocopy = { version = "0.8.54", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
http-body-util = "0.1"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1.0"
rustls-pki-types = "1.15"
bytes = "1.12.1"

# collector infrastructure
jiff = "0.2"
zstd = "0.13"
itoa = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
reqwest = { version = "0.13", features = ["json"] }
url = "2.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
